<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.androidhive.recyclerviewsearch.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_foreground"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_collect_name"
        android:title="@string/collection_name" />
    <item
        android:id="@+id/menu_tack_name"
        android:title="@string/track_name" />
    <item
        android:id="@+id/menu_artist_name"
        android:title="@string/artist_name"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_price"
        android:title="@string/collection_price"
        app:showAsAction="withText" />
</menu>