<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/trackImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_8"
            android:contentDescription="default_image"
            android:src="@drawable/default_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTrackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:paddingTop="@dimen/padding_8"
                android:text="@string/track_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvArtistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_4"
                android:text="@string/artist_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvCollectionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_4"
                android:text="@string/collection_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_4"
                android:text="@string/released_date"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_4"
                android:text="@string/collection_price"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>